<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_mark"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/maincolor" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/gr_rank"
        android:layout_below="@+id/rl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbbyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rank_by_time" >
        </RadioButton>

        <RadioButton
            android:id="@+id/rbbyRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank_by_rate" >
        </RadioButton>
    </RadioGroup>

    <ListView
        android:id="@+id/marklist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gr_rank"
        android:divider="#00000000" />

    <TextView
        android:id="@+id/tx_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/marklist"
        android:gravity="center"
        android:text="@string/mark_empty"
        android:textColor="@color/grey"
        android:textSize="28sp"
        android:visibility="gone" />

    <com.wzx.buptschedule.widget.MarkButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="16dp" />

</RelativeLayout>