<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

 <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/maincolor" >

        <TextView
            android:id="@+id/rl_top_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:background="@drawable/selector_btn_back"/>

        <TextView
            android:id="@+id/tx_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_button_forget_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/editText_forget_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_input_user_email"
        android:inputType="textEmailAddress" 
        android:background="@drawable/selector_et"
        android:textColor="#000"
        android:textSize="15sp" >
    </EditText>

    <Button
        android:id="@+id/button_find_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/editText_forget_email"
        android:layout_below="@+id/editText_forget_email"
        android:background="@drawable/selector_btn_blue"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:onClick="doFindPwd"
        android:textSize="18sp"
        android:text="@string/forget_password_find_password_button" />

</RelativeLayout>

</LinearLayout>